--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-css-components",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "CSS Components for Astro",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/Princesseuh/astro-css-components/issues"
   },
-  "homepage": "https://github.com/Princesseuh/astro-css-components#readme"
+  "homepage": "https://github.com/Princesseuh/astro-css-components#readme",
+  "dependencies": {
+    "csso": "^4.2.0"
+  }
 }
